--- a/app/src/main/res/layout/activity_control.xml
+++ b/app/src/main/res/layout/activity_control.xml
@@ -8,14 +8,14 @@
     android:id="@+id/scrollView2" >
 
 <RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.iri16.control"
-    android:background="@drawable/crash">
+    >
 
 
 
@@ -25,10 +25,9 @@
         android:id="@+id/imageButtonUp"
         android:background="@drawable/redondo"
         android:src="@drawable/tux1"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        />
+        android:layout_marginTop="192dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -44,13 +43,26 @@
     <Switch
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Musica"
+        android:text="Sonido"
         android:id="@+id/musica"
         android:checked="false"
-        android:textColor="#0cfd00"
-        android:layout_marginTop="171dp"
+        android:textColor="#da040f"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/imageButtonStop"
+        android:layout_marginStart="37dp" />
+
+    <VideoView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/videoView"
+        android:layout_toStartOf="@+id/imageButtonUp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerHorizontal="true"
+        android:layout_alignWithParentIfMissing="false"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_above="@+id/imageButtonStop"
+        android:layout_margin="5dp" />
 
 </RelativeLayout>
 </ScrollView>
